# metadata_audio

./: +1  .gitignore  CHANGELOG.md  COMPARISON_TABLE.md  CONTRIBUTING.md  LICENSE  README.md  WASM.md  analysis_options.yaml  fix.py  fix_mp4_test.dart  flutter_rust_bridge.yaml  poc-report.md  pubspec.yaml
.github/workflows/: ci.yml  publish.yml
comparison/: DIFFERENCES.md  compare.sh  diff.txt  output_dart.json  output_ts.json  package-lock.json  package.json  test-typescript.ts
example/: .gitignore  pubspec.yaml
example/lib/: main.dart
lib/: audio_metadata.dart  metadata_audio.dart  metadata_audio_web.dart
lib/src/: core.dart  core_impl.dart  parse_error.dart  parse_file_io.dart  parse_file_web.dart  parse_web_file_io.dart  parse_web_file_web.dart  parser_factory.dart
lib/src/mp4/: atom.dart  (+4 more)
rust/: Cargo.toml
rust/src/: api.rs  common_tags.rs  format_info.rs  frb_generated.rs  lib.rs  native_tags.rs  pictures.rs  remote_mp4.rs  track_details.rs  utils.rs
test/: audio_metadata_test.dart
test/common/: combined_tag_mapper_test.dart  common_utils_test.dart  generic_tag_types_test.dart  metadata_observer_test.dart  model_schema_test.dart  observer_test.dart  tag_mapper_utils_test.dart  tag_priority_test.dart  warnings_test.dart
test/concurrency/: concurrent_parsing_test.dart
test/core/: file_info_and_options_test.dart  io_adapters_test.dart  parse_input_modes_test.dart  parser_factory_precedence_test.dart  parser_loader_contract_test.dart  (+3 more)
tool/: benchmark_remote_url_rust_vs_dart.dart  benchmark_rust_vs_dart.dart  compare_metadata.dart  run_tests.dart
(+156 files in other folders)
